--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
+version: "3.8"
+
 services:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - GIN_MODE=release
+    restart: unless-stopped
+    depends_on:
+      - db
   db:
     image: postgres:16
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U courier_user"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     environment:
-      POSTGRES_DB: mydb
-      POSTGRES_USER: demouser
-      POSTGRES_PASSWORD: pass123
+      POSTGRES_DB: courier
+      POSTGRES_USER: courier_user
+      POSTGRES_PASSWORD: TAM9bGksCMUFvWk
     ports:
       - "5432:5432"
     volumes:
-      - database_data:/var/lib/postgresql/data
+      - database_volume:/var/lib/postgresql/data
 
 volumes:
-  database_data:
+  database_volume:
